加入美指和恒指, 方便看海外市场

--- a/fund.conf
+++ b/fund.conf
@@ -11,6 +11,10 @@ sh000001=上证指数
 sz399001=深证成指
 sh000016=上证50
 sh000300=沪深300
+int_nasdaq=纳斯达克指数
+int_hangseng=恒生指数
+int_sp500=标普指数
+int_dji=道琼斯指数
 sz399396=国证食品
 sz000725=京东方A
 sh600756=浪潮软件
